<resources>
    <string name="app_name">Primer</string>
    <string name="view_drag_helper">view_drag_helper</string>
    <string name="custom_view">custom_view</string>
    <string name="reverse_circle_progress">reverse_circle_progress</string>
    <string name="take_photo">take photo</string>
    <string name="success">success</string>
    <string name="failure">failure</string>
    <string name="check_permissions">check_permissions</string>
    <string name="webP">webP</string>
    <string name="hello_world">hello world</string>
    <string name="Sliding_Pane_Layout">Sliding_Pane_Layout</string>
    <string name="send">send</string>
    <string name="test_socket">test_socket</string>
    <string name="simple_animator">simple_animator</string>
    <string name="recycler_item_anim">recycler_item_anim</string>
    <string name="scroller_view">scroller_view</string>
    <string name="net_cache">net_cache</string>
    <string name="net">net</string>
    <string name="request">request</string>
    <string name="reuse_bitmap">reuse_bitmap</string>
    <string name="meizu_calendar">meizu_calendar</string>

    <string name="behavior_sample_title">com.sdl.primer.ui.customview.SampleTitleBehavior</string>
    <string name="behavior_header">com.sdl.primer.ui.behavior.SampleHeaderBehavior</string>
    <string name="behavior_recycler_view">com.sdl.primer.ui.behavior.RecyclerViewBehavior</string>
    <string name="behavior_advance">behavior_advance</string>
    <string name="banner">banner</string>
    <string name="live_data">live_data</string>
    <string name="live_data_show">I\'m live data, this is show data</string>
    <string name="update_data">update_data</string>
    <string name="main_fragment_title">MainFragmentTitle</string>
    <string name="settings">设置</string>
    <string name="main2_fragment_title">Main2FragmentTitle</string>
    <string name="navigation">navigation</string>
    <string name="simple_decoration">simple_decoration</string>
    <string name="worker">worker</string>
    <string name="select_image">select image</string>
    <!-- Messages -->
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications ->
        WorkManager Demo -> App Permissions and grant access to Storage.</string>
    <string name="cancel_work">Cancel Work</string>
    <string name="go">Go</string>
    <string name="see_file">See File</string>
    <string name="blur_lv_1">A little blurred</string>
    <string name="blur_lv_2">More blurred</string>
    <string name="blur_lv_3">The most blurred</string>
    <string name="blur_title">Select Blur Amount</string>
    <string name="description_image">The image to blur and save.</string>
    <string name="lake_discription">
        Lake Tahoe is a large freshwater lake in the Sierra Nevada of the United States. At a surface
        elevation of 6,225 ft (1,897 m), it straddles the border between California and Nevada, west
        of Carson City. Lake Tahoe is the largest alpine lake in North America. Its depth is
        1,645 ft (501 m), making it the second deepest in the United States after Crater Lake
        (1,945 ft (593 m)). Additionally, Lake Tahoe is the sixth largest lake by volume in the
        United States at 122,160,280 acre·ft (150,682,490 dam3), behind the five Great Lakes.

The lake was formed about 2 million years ago and is a part of the Lake Tahoe Basin with the modern
        lake being shaped during the ice ages. It is known for the clarity of its water and the
        panorama of surrounding mountains on all sides. The area surrounding the lake is also
        referred to as Lake Tahoe, or simply Tahoe. More than 75 percent of the lakes watershed is
        national forest land, comprising the Lake Tahoe Basin Management Unit of the United States
        Forest Service.
    </string>
    <string name="lake_tahoe_image">Image of Lake Tahoe</string>
    <string name="lake_tahoe_title">Lake Tahoe</string>
    <string name="constraint_set">constraint_set</string>
    <string name="motion">motion</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string-array name="english_week_string_array">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

</resources>
